2011-10-06  Gavin Barraclough  <barraclough@apple.com>

        DFG JIT 32_64 should check type of values being filled by fillSpeculateInt
        https://bugs.webkit.org/show_bug.cgi?id=69549

        Reviewed by Oliver Hunt.

        This breaks sunspider/3d-cube.

        * dfg/DFGSpeculativeJIT32_64.cpp:
        (JSC::DFG::SpeculativeJIT::fillSpeculateIntInternal):
            - Speculation check on the tag. 

2011-10-06  Mark Hahnenberg  <mhahnenberg@apple.com>

        Snow Leopard build fix

        Unreviewed build fix

        * JavaScriptCore.exp:

2011-10-05  Gavin Barraclough  <barraclough@apple.com>

        Add explicit JSGlobalThis type.
        https://bugs.webkit.org/show_bug.cgi?id=69478

        Reviewed by Darin Adler.

        JSC supports a split global object, as used by WebCore for the Window. As a stage
        of making this visible to JSC, make it so that if the global this value is not the
        global object itself, it must be a subclass of JSGlobalThis.

        * API/JSCallbackObjectFunctions.h:
        (JSC::::finishCreation):
            - Don't pass the thisValue to JSGlobalObject::finishCreation.
        * JavaScriptCore.xcodeproj/project.pbxproj:
            - Added JSGlobalThis.h
        * jsc.cpp:
        (GlobalObject::finishCreation):
            - Don't pass the thisValue to JSGlobalObject::finishCreation.
        * runtime/JSGlobalObject.h:
        (JSC::JSGlobalObject::create):
        (JSC::JSGlobalObject::finishCreation):
            - finishCreation takes a JSGlobalThis, or thisValue is implicit.
        * runtime/JSGlobalThis.h: Added.
        (JSC::JSGlobalThis::create):
        (JSC::JSGlobalThis::JSGlobalThis):
        (JSC::JSGlobalThis::finishCreation):
            - Thin wrapper on JSNonFinalObject to allow type checking.
        * testRegExp.cpp:
        (GlobalObject::finishCreation):
            - Don't pass the thisValue to JSGlobalObject::finishCreation.
