@@ -40,52 +40,6 @@
 
 namespace JSC { namespace DFG {
 
-// This method used to fill a numeric value to a FPR when linking speculative -> non-speculative.
-void JITCompiler::fillNumericToDouble(NodeIndex nodeIndex, FPRReg fpr, GPRReg temporary)
-{
-    Node& node = graph()[nodeIndex];
-
-    if (node.hasConstant()) {
-        ASSERT(isNumberConstant(nodeIndex));
-        loadDouble(addressOfDoubleConstant(nodeIndex), fpr);
-    } else {
-        load32(tagFor(node.virtualRegister()), temporary);
-        Jump isInteger = branch32(MacroAssembler::Equal, temporary, TrustedImm32(JSValue::Int32Tag));
-        loadDouble(addressFor(node.virtualRegister()), fpr);
-        Jump hasUnboxedDouble = jump();
-        isInteger.link(this);
-        load32(payloadFor(node.virtualRegister()), temporary);
-        convertInt32ToDouble(temporary, fpr);
-        hasUnboxedDouble.link(this);
-    }
-}
-
-// This method used to fill an integer value to a GPR when linking speculative -> non-speculative.
-void JITCompiler::fillInt32ToInteger(NodeIndex nodeIndex, GPRReg gpr)
-{
-    Node& node = graph()[nodeIndex];
-
-    if (node.hasConstant()) {
-        ASSERT(isInt32Constant(nodeIndex));
-        move(MacroAssembler::Imm32(valueOfInt32Constant(nodeIndex)), gpr);
-    } else {
-#if ENABLE(DFG_JIT_ASSERT)
-        // Redundant load, just so we can check the tag!
-        load32(tagFor(node.virtualRegister()), gpr);
-        jitAssertIsJSInt32(gpr);
-#endif
-        load32(payloadFor(node.virtualRegister()), gpr);
-    }
-}
-
-// This method used to fill a JSValue to a GPR when linking speculative -> non-speculative.
-void NO_RETURN JITCompiler::fillToJS(NodeIndex nodeIndex, GPRReg gpr)
-{
-    ASSERT_NOT_REACHED();
-    UNUSED_PARAM(nodeIndex);
-    UNUSED_PARAM(gpr);
-}
-
 void JITCompiler::exitSpeculativeWithOSR(const OSRExit& exit, SpeculationRecovery* recovery, Vector<BytecodeAndMachineOffset>& decodedCodeMap)
 {
     // 1) Pro-forma stuff.
