@@ -1,5 +1,14 @@
 2011-10-06  Gavin Barraclough  <barraclough@apple.com>
 
+        Unreviewed build fix for DFG JIT 32_64 release builds.
+
+        * dfg/DFGJITCompiler.cpp:
+        * dfg/DFGJITCompiler.h:
+        * dfg/DFGJITCompiler32_64.cpp:
+            - Remove three unused methods.
+
+2011-10-06  Gavin Barraclough  <barraclough@apple.com>
+
         DFG JIT 32_64 should check type of values being filled by fillSpeculateInt
         https://bugs.webkit.org/show_bug.cgi?id=69549
 
